--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ greenlet==0.4.12
 gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
-MarkupSafe==1.0
+MarkupSafe
 numpy==1.13.1
 olefile==0.44
 opencv-python==3.2.0.7
